# In5

./: .env  README.md  main.py  pyproject.toml  test.py
app/: database.db
app/crud/: db_interactions.py
app/db/: db_connection.py
app/models/: knowledge.py  user_preferences.py  users.py
app/prompts/: templates.py
app/routes/: ai.py  authentication.py  knowledge.py
app/schemas/: content.py  show_user.py
app/services/: content_generator.py  jwt_token_generator.py
app/utils/: gemini.py  hashing.py
